# bachelor-thesis

./: .gitignore  .gitmodules  README.md
ood_dataset/: LICENSE  NOTICE.md  README.md
ood_dataset/books/: test.csv
ood_dataset/cars/: test.csv
ood_dataset/combined/: test.csv
ood_dataset/games/: test.csv
ood_dataset/mobiles/: test.csv
ood_dataset/movies/: test.csv
review-utils/: pyproject.toml
review-utils/combine/: utils.py
review-utils/evals/: compare_datasets.py  dataset_counts.py  eval_classification_ensemble.py  eval_classification_individual.py  eval_experiments.py  feature_importance.py
review-utils/processing/: get_feature_importance.py  remove_outliers.py  to_json.py
scripts/: compare_datasets.py  concat.py  make_splits.py  metacentrum_ssh.sh  pyproject.toml  remove_outliers.py  to_separate.py
scripts/combine/: combine.py
utils/: pyproject.toml
utils/combine/: combine.py  main.py
utils/evals/: eval_classification_ensemble.py  eval_classification_individual.py  eval_cross_validation.py  eval_experiments.py  eval_models.py
utils/plots/: compare_datasets.py
utils/processing/: concat.py  make_splits.py  transform_synthetic_reviews.py
utils/scripts/: metacentrum_ssh.sh
