[project]
name = "review-utils"
version = "0.1.0"
description = "Help python/shell files for my bachelor thesis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "unidecode>=1.4.0",
]
